--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DCG-dP-Fms">
-    <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,7 +13,7 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="JuiceMakerViewController" customModule="JuiceMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="zaq-m5-IIF">
@@ -243,11 +241,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bananaStockValue" destination="gvk-pA-Lw5" id="Y5W-jp-5j5"/>
-                        <outlet property="kiwiStockValue" destination="FZq-de-TJG" id="1Lm-Wz-zfQ"/>
-                        <outlet property="mangoStockValue" destination="3Ce-SU-JeH" id="Dc4-1m-LbH"/>
-                        <outlet property="pineappleStockValue" destination="ccQ-Dk-PuY" id="JAl-XH-YJ8"/>
-                        <outlet property="strawberryStockValue" destination="Qas-vP-td6" id="viS-vj-Pia"/>
+                        <outlet property="bananaLabel" destination="gvk-pA-Lw5" id="Y5W-jp-5j5"/>
+                        <outlet property="kiwiLabel" destination="FZq-de-TJG" id="1Lm-Wz-zfQ"/>
+                        <outlet property="mangoLabel" destination="3Ce-SU-JeH" id="Dc4-1m-LbH"/>
+                        <outlet property="pineappleLabel" destination="ccQ-Dk-PuY" id="JAl-XH-YJ8"/>
+                        <outlet property="strawberryLabel" destination="Qas-vP-td6" id="viS-vj-Pia"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -277,7 +275,7 @@
             <objects>
                 <viewController storyboardIdentifier="FruitStoreViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Yu1-lM-nqp" customClass="FruitStoreViewController" customModule="JuiceMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tKV-4l-Vtc">
-                        <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="TF0-m5-IFq">
